[gd_scene load_steps=39 format=3 uid="uid://kqrwytbvwyno"]

[ext_resource type="Script" uid="uid://63ocy5a6gohw" path="res://scripts/globals/gui_manager.gd" id="1_01qsd"]
[ext_resource type="FontFile" uid="uid://d3qxk71omhsy" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="2_8d174"]
[ext_resource type="Texture2D" uid="uid://jvmip0bjonjh" path="res://assets/sprites/menus_and_misc/bg menu.jpg" id="3_mrw3c"]
[ext_resource type="Texture2D" uid="uid://dkjp51g1sjh21" path="res://assets/sprites/menus_and_misc/logo animado.png" id="4_rbxbw"]
[ext_resource type="Theme" uid="uid://765j1dxaivoe" path="res://assets/themes/buttons/buttons_theme.tres" id="5_w8ru2"]
[ext_resource type="PackedScene" uid="uid://b35fe5wdtb77i" path="res://scenes/globals/sound_icon.tscn" id="6_haemp"]
[ext_resource type="Texture2D" uid="uid://krnpsv5q7w60" path="res://assets/sprites/menus_and_misc/creditos2.png" id="7_dc7dl"]
[ext_resource type="Script" uid="uid://c8nh1wpwg1qo2" path="res://scripts/menus/input_settings.gd" id="8_aae78"]
[ext_resource type="PackedScene" uid="uid://duqt0xpu2vl7s" path="res://scenes/menus/input_button.tscn" id="9_yixji"]
[ext_resource type="PackedScene" uid="uid://bm6d5h4uxvq7x" path="res://scenes/game/select_upgrades_scene.tscn" id="10_3da3r"]
[ext_resource type="AudioStream" uid="uid://ttsymx30w523" path="res://assets/sounds/menus/MENU SOUND - DOWN.wav" id="10_271i3"]
[ext_resource type="AudioStream" uid="uid://bnr2bup87a15w" path="res://assets/sounds/menus/MENU SOUND - SELECT.wav" id="11_4wjxq"]
[ext_resource type="AudioStream" uid="uid://c7ub3vyngmw21" path="res://assets/sounds/menus/MENU SOUND - BACK.wav" id="12_pme4d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qupqx"]
bg_color = Color(0.486275, 0.494118, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jw8q3"]
bg_color = Color(0.184314, 0.129412, 0.231373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bglms"]
bg_color = Color(0.129412, 0.258824, 0.419608, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_av8d4"]
atlas = ExtResource("4_rbxbw")
region = Rect2(0, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_lygdd"]
atlas = ExtResource("4_rbxbw")
region = Rect2(368, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_fk72n"]
atlas = ExtResource("4_rbxbw")
region = Rect2(736, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_hocec"]
atlas = ExtResource("4_rbxbw")
region = Rect2(1104, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm1mg"]
atlas = ExtResource("4_rbxbw")
region = Rect2(1472, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhjel"]
atlas = ExtResource("4_rbxbw")
region = Rect2(1840, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_icv02"]
atlas = ExtResource("4_rbxbw")
region = Rect2(2208, 0, 368, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_wpw45"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_av8d4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lygdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fk72n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hocec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm1mg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhjel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icv02")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_1mbii"]
default_font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_mnopy"]
font = ExtResource("2_8d174")
font_size = 12
font_color = Color(0.486275, 0.494118, 0.631373, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1tl11"]
font = ExtResource("2_8d174")
font_size = 12
font_color = Color(0.486275, 0.494118, 0.631373, 1)

[sub_resource type="Theme" id="Theme_qupqx"]
default_font_size = 24

[sub_resource type="AtlasTexture" id="AtlasTexture_jw8q3"]
atlas = ExtResource("4_rbxbw")
region = Rect2(0, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_bglms"]
atlas = ExtResource("4_rbxbw")
region = Rect2(368, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_qsswy"]
atlas = ExtResource("4_rbxbw")
region = Rect2(736, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvbyd"]
atlas = ExtResource("4_rbxbw")
region = Rect2(1104, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpw45"]
atlas = ExtResource("4_rbxbw")
region = Rect2(1472, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mbii"]
atlas = ExtResource("4_rbxbw")
region = Rect2(1840, 0, 368, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_mnopy"]
atlas = ExtResource("4_rbxbw")
region = Rect2(2208, 0, 368, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_1tl11"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw8q3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bglms")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qsswy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvbyd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpw45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mbii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mnopy")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_55n0w"]
font = ExtResource("2_8d174")
font_size = 12
font_color = Color(0.486275, 0.494118, 0.631373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xqxrh"]
bg_color = Color(0, 0, 0, 0)

[node name="GuiManager" type="Node2D"]
script = ExtResource("1_01qsd")

[node name="GameHud" type="CanvasLayer" parent="."]

[node name="HudXP" type="ProgressBar" parent="GameHud"]
offset_right = 1145.0
offset_bottom = 13.0
theme_override_styles/background = SubResource("StyleBoxFlat_qupqx")
theme_override_styles/fill = SubResource("StyleBoxFlat_jw8q3")
value = 16.12
rounded = true
show_percentage = false

[node name="HudScoreLabel" type="Label" parent="GameHud"]
offset_left = 550.0
offset_top = -4.0
offset_right = 604.0
offset_bottom = 19.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_8d174")
text = "0 ores."

[node name="HudTimerBar" type="ProgressBar" parent="GameHud"]
offset_top = 14.0
offset_right = 1145.0
offset_bottom = 28.0
theme_override_styles/fill = SubResource("StyleBoxFlat_bglms")
value = 100.0
show_percentage = false

[node name="HudTimerText" type="Label" parent="GameHud"]
offset_left = 554.0
offset_top = 11.0
offset_right = 594.0
offset_bottom = 34.0
theme_override_fonts/font = ExtResource("2_8d174")
text = "10:00"

[node name="HudPortalActive" type="Label" parent="GameHud"]
visible = false
offset_left = 526.0
offset_top = 148.0
offset_right = 627.0
offset_bottom = 171.0
text = "Portal active!"

[node name="HudGodMode" type="Label" parent="GameHud"]
visible = false
offset_left = 520.0
offset_top = 123.0
offset_right = 633.0
offset_bottom = 146.0
text = "You are a God!"

[node name="LevelUpNotificationLabel" type="Label" parent="GameHud"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -17.0
offset_right = 52.5
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 24
text = "Level UP!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="MainMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mrw3c")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -112.0
offset_right = 67.5
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 62

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MainMenu/MarginContainer"]
position = Vector2(70, -31)
sprite_frames = SubResource("SpriteFrames_wpw45")
autoplay = "default"

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
custom_minimum_size = Vector2(94, 192)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_1mbii")

[node name="NewGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
theme = ExtResource("5_w8ru2")
text = "New Game"
flat = true

[node name="ContinueGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("5_w8ru2")
disabled = true
text = "Continue Game"
flat = true

[node name="LoadGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("5_w8ru2")
disabled = true
text = "Load Game"
flat = true

[node name="SaveGameButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("5_w8ru2")
disabled = true
text = "Save Game"
flat = true

[node name="SettingsButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../CreditsButton")
theme = ExtResource("5_w8ru2")
text = "Settings"
flat = true

[node name="CreditsButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme = ExtResource("5_w8ru2")
text = "Credits"
flat = true

[node name="QuitButton" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../CreditsButton")
focus_neighbor_bottom = NodePath("../NewGameButton")
theme = ExtResource("5_w8ru2")
theme_override_fonts/font = ExtResource("2_8d174")
theme_override_font_sizes/font_size = 12
text = "Quit"
flat = true

[node name="instructions" type="Label" parent="MainMenu"]
offset_left = 124.0
offset_top = 608.0
offset_right = 377.0
offset_bottom = 642.0
text = "UP and DOWN keys to browse the menu"
label_settings = SubResource("LabelSettings_mnopy")
horizontal_alignment = 1
vertical_alignment = 1

[node name="instructions2" type="Label" parent="MainMenu"]
offset_left = 837.0
offset_top = 610.0
offset_right = 1015.0
offset_bottom = 644.0
text = "ENTER to select"
label_settings = SubResource("LabelSettings_1tl11")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Credits" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="Credits"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mrw3c")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Credits"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -99.0
offset_right = 77.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="Credits/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Credits/MarginContainer/VBoxContainer2"]
layout_mode = 2
texture = ExtResource("7_dc7dl")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0

[node name="Back" type="Button" parent="Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_w8ru2")
text = "Back"
flat = true

[node name="SettingsMenu" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="SettingsMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_mrw3c")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingsMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.5
offset_top = -99.0
offset_right = 67.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_qupqx")
theme_override_constants/margin_top = 62

[node name="AnimatedLogo" type="AnimatedSprite2D" parent="SettingsMenu/MarginContainer"]
position = Vector2(70, -31)
sprite_frames = SubResource("SpriteFrames_1tl11")
autoplay = "default"

[node name="ButtonsContainer" type="VBoxContainer" parent="SettingsMenu/MarginContainer"]
custom_minimum_size = Vector2(94, 192)
layout_mode = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme = SubResource("Theme_qupqx")

[node name="SettingsLabel" type="Label" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.705882, 0.709804, 0.258824, 1)
theme_override_fonts/font = ExtResource("2_8d174")
text = "Settings"

[node name="MasterVolumeLabel" type="Label" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.494118, 0.631373, 1)
theme_override_fonts/font = ExtResource("2_8d174")
theme_override_font_sizes/font_size = 12
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MasterVolumeSlider" type="HSlider" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../Back")
focus_neighbor_bottom = NodePath("../MusicVolumeSlider")
min_value = -45.0
max_value = 0.0

[node name="MusicVolumeLabel" type="Label" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.494118, 0.631373, 1)
theme_override_fonts/font = ExtResource("2_8d174")
theme_override_font_sizes/font_size = 12
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolumeSlider" type="HSlider" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../SFXVolumeSlider")
min_value = -60.0
max_value = -15.0
value = -15.0

[node name="SFXVolumeLabel" type="Label" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.486275, 0.494118, 0.631373, 1)
theme_override_fonts/font = ExtResource("2_8d174")
theme_override_font_sizes/font_size = 12
text = "SFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolumeSlider" type="HSlider" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MusicVolumeSlider")
focus_neighbor_bottom = NodePath("../ControlsButton")
min_value = -60.0
max_value = -15.0
value = -15.0

[node name="ControlsButton" type="Button" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../MasterVolumeSlider")
focus_neighbor_bottom = NodePath("../Back")
theme = ExtResource("5_w8ru2")
text = "Controls"
flat = true

[node name="Back" type="Button" parent="SettingsMenu/MarginContainer/ButtonsContainer"]
layout_mode = 2
theme = ExtResource("5_w8ru2")
text = "Back"
flat = true

[node name="instructions" type="Label" parent="SettingsMenu"]
offset_left = 124.0
offset_top = 608.0
offset_right = 377.0
offset_bottom = 642.0
text = "ESC to go to main menu"
label_settings = SubResource("LabelSettings_55n0w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundIcon" parent="SettingsMenu" instance=ExtResource("6_haemp")]
visible = false

[node name="InputSettings" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="InputSettings"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_aae78")

[node name="TextureRect" type="TextureRect" parent="InputSettings/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mrw3c")
expand_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="InputSettings/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -196.0
offset_right = 243.0
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("MarginContainer/VBoxContainer/BackToSettingsButton")
focus_neighbor_bottom = NodePath("MarginContainer/VBoxContainer/ResetButton")
theme_override_styles/panel = SubResource("StyleBoxFlat_xqxrh")

[node name="MarginContainer" type="MarginContainer" parent="InputSettings/Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="InputSettings/Control/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.705882, 0.709804, 0.258824, 1)
theme_override_fonts/font = ExtResource("2_8d174")
theme_override_font_sizes/font_size = 24
text = "Controls"

[node name="Spacer" type="Control" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionList" type="VBoxContainer" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InputButton" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton2" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton3" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton4" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton5" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton6" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton7" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton8" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="InputButton9" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/ActionList" instance=ExtResource("9_yixji")]
layout_mode = 2

[node name="SaveConfigButton" type="Button" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../BackToSettingsButton")
focus_neighbor_bottom = NodePath("../ResetButton")
theme = ExtResource("5_w8ru2")
text = "Save Controls "
flat = true

[node name="ResetButton" type="Button" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../SaveConfigButton")
focus_neighbor_bottom = NodePath("../BackToSettingsButton")
theme = ExtResource("5_w8ru2")
text = "Reset to default"
flat = true

[node name="BackToSettingsButton" type="Button" parent="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ResetButton")
focus_neighbor_bottom = NodePath("../SaveConfigButton")
theme = ExtResource("5_w8ru2")
text = "Back to settings"
flat = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.337255)

[node name="GameOverLabel" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.5
offset_top = -41.5
offset_right = 166.5
offset_bottom = 41.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Game Over"

[node name="GameOverRestartButton" type="Button" parent="GameOverScreen"]
offset_left = 545.0
offset_top = 381.0
offset_right = 638.0
offset_bottom = 412.0
text = "Restart"

[node name="PauseMenu" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mrw3c")
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_bottom = 12

[node name="SettingsLabel" type="Label" parent="PauseMenu/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.705882, 0.709804, 0.258824, 1)
theme_override_fonts/font = ExtResource("2_8d174")
text = "GAME PAUSED"

[node name="ContinueGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitToDesktopButton")
theme = ExtResource("5_w8ru2")
text = "Continue Game"

[node name="RestartGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_w8ru2")
text = "Restart Game"

[node name="Spacer" type="Control" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="LoadGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("5_w8ru2")
disabled = true
text = "Load Game"

[node name="SaveGameButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("5_w8ru2")
disabled = true
text = "Save Game"

[node name="Spacer2" type="Control" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="OpenSettingsButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_w8ru2")
text = "Settings"

[node name="Spacer3" type="Control" parent="PauseMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="QuitToMainMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_w8ru2")
text = "Quit to Main Menu"

[node name="QuitToDesktopButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../ContinueGameButton")
theme = ExtResource("5_w8ru2")
text = "Quit to Desktop"

[node name="LevelsMenu" type="CanvasLayer" parent="."]
visible = false

[node name="TextureRect" type="TextureRect" parent="LevelsMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_mrw3c")
expand_mode = 2

[node name="Label" type="Label" parent="LevelsMenu"]
offset_left = 512.0
offset_top = 221.0
offset_right = 631.0
offset_bottom = 241.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.705882, 0.709804, 0.258824, 1)
theme_override_fonts/font = ExtResource("2_8d174")
text = "CHOOSE A LEVEL"

[node name="ScrollContainer" type="ScrollContainer" parent="LevelsMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 435.0
offset_top = 277.0
offset_right = -435.0
offset_bottom = -283.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.96)
size_flags_horizontal = 4
size_flags_vertical = 4
horizontal_scroll_mode = 0

[node name="LevelsContainer" type="VBoxContainer" parent="LevelsMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("5_w8ru2")
theme_override_constants/separation = 5

[node name="TestButton" type="Button" parent="LevelsMenu/ScrollContainer/LevelsContainer"]
layout_mode = 2
text = "TESTE"

[node name="TestButton2" type="Button" parent="LevelsMenu/ScrollContainer/LevelsContainer"]
layout_mode = 2
text = "TESTE"

[node name="VBoxContainer" type="VBoxContainer" parent="LevelsMenu"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -59.0
offset_top = -264.0
offset_right = 59.0
offset_bottom = -224.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackToMainMenuButton" type="Button" parent="LevelsMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_w8ru2")
text = " Back To Main Menu "
flat = true

[node name="UpgradesMenu" type="CanvasLayer" parent="."]
visible = false

[node name="SelectUpgrades" parent="UpgradesMenu" instance=ExtResource("10_3da3r")]

[node name="Sounds" type="Node" parent="."]

[node name="HoverSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_271i3")

[node name="SelectSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("11_4wjxq")

[node name="BackSoundPlayer" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("12_pme4d")

[node name="SoundIcon" parent="." instance=ExtResource("6_haemp")]

[connection signal="pressed" from="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/SaveConfigButton" to="InputSettings/Control" method="_on_save_config_button_pressed"]
[connection signal="pressed" from="InputSettings/Control/PanelContainer/MarginContainer/VBoxContainer/ResetButton" to="InputSettings/Control" method="_on_reset_button_pressed"]
